Fixed the overflowing content in the Popup Dialog

--- a/style.css
+++ b/style.css
@@ -235,8 +235,8 @@ body{
 .pop-up-container{
     background-color: rgba(0, 0, 0, 0.719);
     width: 100%;
-    height: 100vh;
-    position: absolute;
+    min-height: 100vh;
+    position: fixed;
     top: 0%;
     left: 0%;
     right: 0%;
@@ -245,7 +245,7 @@ body{
 
 .pop-up-details {
     width: 30%;
-    height: auto;
+    max-height: 80vh; 
     background-color: var(--rose-50);
     position: absolute;
     top: 50%;
@@ -253,6 +253,7 @@ body{
     transform: translate(-50%, -50%);
     border-radius: 20px;
     padding: 30px;
+    overflow-y: auto;
 }
 
 /* ================ Media Queries ============================ */
